# AutomodelLineDetector

./: .gitignore  LICENSE  README.md  compile_commands.json  merge_compile_commands.sh
.devcontainer/: devcontainer.json
catkin_ws/src/automodel_line_detector/: CMakeLists.txt
catkin_ws/src/automodel_line_detector/config/: config.yaml
catkin_ws/src/automodel_line_detector/include/automodel_line_detector/: AutomodelLineDetector.h
catkin_ws/src/automodel_line_detector/launch/: automodel_launch_detector.launch
catkin_ws/src/automodel_line_detector/src/: AutomodelLineDetector.cpp  automodel_line_detector_node.cpp
docker/: Dockerfile  entrypoint.sh
src/automodel_line_detector/: CMakeLists.txt  README.md  package.xml
src/automodel_line_detector/cfg/: LineDetector.cfg  line_detector.cfg
src/automodel_line_detector/config/: config.yaml  line_detector.perspective
src/automodel_line_detector/include/: automodel_line_detector.hpp
src/automodel_line_detector/launch/: automodel_launch_detector.launch
src/automodel_line_detector/src/: automodel_line_detector.cpp  automodel_line_detector_node.cpp
src/lines_detector/: CMakeLists.txt  package.xml
src/lines_detector/cfg/: LinesDetector.cfg
src/lines_detector/config/: config.yaml  lines_detector.perspective
src/lines_detector/include/: lines_detector.hpp
src/lines_detector/launch/: automodel_lines_detector.launch
src/lines_detector/src/: lines_detector.cpp  lines_detector_node.cpp
src/video_publisher/: CMakeLists.txt  package.xml
src/video_publisher/include/: video_publisher.hpp
src/video_publisher/src/: video_publisher.cpp  video_publisher_node.cpp
